tests/test18.output
/home/vladyslav/CLionProjects/mcc/tests/test18.c:4:21[0;31m error [0m
Expected identifier or literal, near ';', line 4

/home/vladyslav/CLionProjects/mcc/tests/test18.c:9:2[0;31m error [0m
Expected ';' after expression statement, near '}', line 9

/home/vladyslav/CLionProjects/mcc/tests/test18.c:11:14[0;31m error [0m
Expected identifier or literal, near ';', line 11

/home/vladyslav/CLionProjects/mcc/tests/test18.c:14:10[0;31m error [0m
Expected operator, near '1', line 14

Encountered 4 syntax errors. Stopping compilation.
