tests/test18.c
#include <stdio.h>

int main() {
	int x = 28, y = x +;

	for (int i = 0, j = 0; i < 10; i = i + 1) {
	  printf("%d\n", i * j);
	  printf("%d\n", k++)
	}

	int z = 100.;

	while (z < 100) {
	  z = z 1;
	  printf("%d\n", z);
	}

	printf("%d\n", k);
}